# AndroidCoverageAgent

./: .gitignore  README.md  build.gradle  deploy.sh  launch_app.sh  settings.gradle
deployer/: build.gradle
deployer/src/main/java/com/ammaraskar/coverageagent/: Deployer.kt  ForceAppDebuggable.kt
gradle/wrapper/: gradle-wrapper.properties
runtime_cpp/: .gitignore  build.gradle
runtime_cpp/src/main/cpp/: CMakeLists.txt  CMakeRC.cmake  coverage_instrumenting_agent.cpp  jvmti_allocator.h
runtime_cpp/src/main/cpp/include/: jvmti.h
runtime_cpp/src/main/cpp/slicer/: buffer.h  dex_bytecode.cc
runtime_java/: build.gradle
runtime_java/src/main/: AndroidManifest.xml
runtime_java/src/main/java/com/ammaraskar/coverageagent/: Instrumentation.java
runtime_java/src/test/java/com/ammaraskar/coverageagent/: InstrumentationTest.java
scripts/: find_ignored_classes.sh  launch_app.sh
